--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.21.2",
     "csv-parse": "^5.5.3",
     "fs": "^0.0.1-security",
+    "lucide-react": "^0.475.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -23,6 +26,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "tailwind-scrollbar": "^4.0.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
