--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.66.7",
     "@tanstack/react-table": "^8.21.2",
     "csv-parse": "^5.5.3",
+    "framer-motion": "^12.4.4",
     "fs": "^0.0.1-security",
     "lucide-react": "^0.475.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "recharts": "^2.15.1"
+    "recharts": "^2.15.1",
+    "use-debounce": "^10.0.4"
   },
   "devDependencies": {
     "@types/node": "^20",
