--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-range": "^1.10.0",
     "recharts": "^2.15.1",
     "use-debounce": "^10.0.4"
   },
